# dataforge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  ecosystem.config.js  pyproject.toml  pyrightconfig.json  ruff.toml  test_attributes.py  test_import_punta.py  test_material_filter.py  test_material_filter_unit.py  test_similarity_duplicates.py  test_similarity_groups.py  test_similarity_groups_output.csv
.github/: copilot-instructions.md
.serena/: project.yml
.streamlit/: config.toml
dataforge/: __init__.py  attributes.py  campaign_selection.py  collections.py  db.py  excel_merge.py  matching.py  matching_helpers.py  matching_query.py  matching_sql.py  schema.py  secrets.py  similarity_config.py  similarity_matching.py  ui.py  utils.py
docs/: DB_relations.md  README.md  TZ_mp_matching_by_barcodes.md  TZ_oz_orders_import.md  TZ_oz_products_full_import.md  TZ_oz_products_import.md  TZ_punta_barcodes.md  TZ_wb_prices_import.md  TZ_wb_products_import.md  code_review_max_group_size.md  combine_products_oz.md  duplicate_size_marking.md  material_filter_change.md  similarity_max_group_size.md  wb_sku_for_test.txt
pages/: 01_📊_Overview.py  01_📊_Обзор.py  02_📥_Импорт_файлов.py  03_⚙️_Settings.py  04_🗂️_Просмотр_таблиц.py  05_🔎_Сопоставление_карточек.py  06_🗂_Коллекции.py  06_🗂️_Коллекции.py  07_🎯_Подбор_РК_OZ.py  08_🧩_Склейка_OZ.py  09_🧹_Схожесть_карточек_OZ.py  10_📊_Объединение_Excel.py  11_✏️_Редактор_характеристик.py
scripts/: autotune_calibrate.py  check_priority_logic.py  migrate_attributes_composite_key.py  start_dataforge.sh  test_duplicate_workflow.py  (+3 more)
(+46 files in other folders)
