[project]
name = "dataforge"
version = "0.1.0"
description = "Multipage Streamlit dashboard scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.0",
    "duckdb>=0.9",
    "toml>=0.10",
    "openpyxl>=3.1",
    "watchdog>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5",
]

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
